--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp build",
-    "start": "npm run build && gulp serve",
+    "start": "gulp watch"
   },
   "repository": {
     "type": "git",
